...

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ProfileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="411dp"
...
                app:layout_constraintBottom_toBottomOf="@+id/cardview9"
                app:layout_constraintEnd_toEndOf="@+id/cardview9"
                app:layout_constraintTop_toTopOf="@+id/cardview9"
                app:srcCompat="@drawable/lixo" />

            <ImageButton
                android:id="@+id/imageViewInput1"
                android:layout_width="93dp"
                android:layout_height="57dp"
                android:layout_marginEnd="-5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/menu_option1_text"
                app:layout_constraintBottom_toBottomOf="@+id/cardview6"
                app:layout_constraintEnd_toEndOf="@+id/cardview6"
                app:layout_constraintTop_toTopOf="@+id/cardview6"
                app:srcCompat="@drawable/presente" />

            <ImageButton
                android:id="@+id/imageViewInput2"
                android:layout_width="93dp"
                android:layout_height="57dp"
                android:layout_marginEnd="-5dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/cardview7"
                app:layout_constraintEnd_toEndOf="@+id/cardview7"
...
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/cardview4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewMessage" />

            <ImageButton
                android:id="@+id/imageViewInputConfig"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="-5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/settings"
...
