...

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ConfigScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="411dp"
...
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageViewChevron"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/home_option_text"
        app:layout_constraintBottom_toBottomOf="@+id/cardviewNavbar"
        app:layout_constraintEnd_toEndOf="parent"
...
