...

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/CollectScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="411dp"
...
