...
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/white_view">

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputName"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_name_sing_up"
        android:inputType="text"
...
        app:layout_constraintBottom_toBottomOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@+id/white_view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputcpf"
        android:layout_width="234dp"
        android:layout_height="56dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_cpf_sing_up"
        android:inputType="number"
...
        app:layout_constraintBottom_toBottomOf="@+id/cardviewInput2"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toTopOf="@+id/cardviewInput2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNewAccount"
        android:layout_width="259dp"
        android:layout_height="66dp"
        android:background="@drawable/botao_customizado_sing_up"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sing_up_button"
        android:textAllCaps="false"
...
        app:layout_constraintStart_toStartOf="@+id/white_view">


    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputcep"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_cep_sing_up"
        android:inputType="text"
...
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/white_view">

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputemail"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_email_sing_up"
        android:inputType="text"
...
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/white_view">

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPhone"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:layout_marginBottom="-10dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_phone_sing_up"
...
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toBottomOf="@+id/textViewInput6">

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPassword"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:layout_marginTop="-10dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_password_sing_up"
...
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toBottomOf="@+id/textViewInput7">

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputPassword2"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:layout_marginBottom="-10dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_password_sing_up"
...
        app:layout_constraintBottom_toBottomOf="@+id/cardviewInput7"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/white_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLoginAccount"
        android:layout_width="73dp"
        android:layout_height="50dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/button_selector"
        android:text="@string/call_registration_sing_up2"
...
